--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2 class="Subtitulo">Practicas</h2>
         <ol>
             <li><a href="./Practicas/Calculadora/Calculadora.html">Calculadora</a></li>
+            <li><a href="./Practicas/Registro/index.html">Registro</a></li>
         </ol>
 
         <h2>Habilidades</h2>
